# toolbox

./: .gitignore  .gitmodules  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: deploy-docs-ghpages.yml  mirror_gitee.yml
api/: index.html
calculator/: index.html
cheatsheet/lmp/input_script/: model_devi.lammps  npt_1d.lammps  npt_3d.lammps  nvt.lammps  t-remd.lammps  validate.lammps  xtc_dump.lammps
cheatsheet/lmp/input_script/old/: validate.lammps
cheatsheet/mda/: io.py
cp2k/: index.html
data/: lj-pot.csv
doc/: calculator.md  cp2k.md  lammps.md  unittest.md
docs/: api.md  index.md  plot.md
docs/stylesheets/: extra.css
dp/: index.html
examples/calculator/: elecpot.ipynb
examples/calculator/elecpot/: coord.xyz  elecpot.ipynb
examples/calculator/wannier_hartree_potential/: coord.xyz  example.ipynb  input.inp  output  wannier.xyz  wannier_spread.out
examples/cp2k/00.workfunction/: coord.xyz  cp2k-RESTART.wfn  cp2k-RESTART.wfn.bak-1  cp2k-v_hartree-1_0.cube  cp2k.err.12571  cp2k.out.12571  cp2k.slurm  input.inp  output  run.py
examples/cp2k/01.cutoff_convergence/: run.py
examples/lmp/: xtc_dump.lammps
examples/lmp/input_script/: model_devi.lammps  npt_3d.lammps  nvt.lammps  t-remd.lammps  validate.lammps
examples/lmp/input_script/old/: model_devi.lammps  run.lammps
lammps/: index.html
plot/: index.html
search/: search_index.json
tests/calculator/calculator/: test.ipynb  test_elecpot.ipynb  test_module.py
tests/cp2k_output/: ot_output  output_v7.1  output_v9.1  test.ipynb
tests/data/cp2k_v2024.3_ot_uks/: coord.xyz  input.inp  output  script  test.ipynb  wannier.xyz  wannier_spread.out
tests/data/cp2k_v2024.3_smear_rks/: input.inp  output
tests/data/cp2k_v7.1_ot_rks/: berry_phase_moment  coord.xyz  dipole_wannier  input.inp  input.json  output  wannier.xyz
tests/dpdata/: test.ipynb
tests/external_package/: test.ipynb
tests/io/: test_InterfaceGenerator.ipynb  test_cp2k.py
tests/io/cp2k/: ase_calculator.ipynb  output  output.ipynb  output.out
tests/io/cp2k/test_system/: input.inp
tests/lammps_calculator/: lammps.stdout
tests/plot/plot/: test.ipynb
tests/quick_tests/cp2k_output/: ot_output  output_berry_dipole  output_surf_dipole  output_v7.1  output_v9.1  test.ipynb
tests/quick_tests/dpdata/: test.ipynb
tests/quick_tests/external_package/: test.ipynb
tests/quick_tests/lammps_calculator/: lammps.stdout  test.ipynb
tests/read_configs/: input.inp  test.ipynb
toolbox/: __init__.py  validate.py
toolbox/calculator/: __init__.py  bash.py  coulomb.py  cp2k.py  d3.py  dp.py  dpgen.py  dpgen.py.aa792b63283f928384888c1082e0a819.tmp  elecpot.py  lammps.py  template.py
toolbox/io/: __init__.py  ase_logger.py  bpnn.py  build.py  cp2k.py  dp_jax.py  dpdata.py  lammps.py  template.py
toolbox/io/backup/: lj.json  lj_param.py
toolbox/io/ion_structure_lib/IL_OPLS/: README.txt
toolbox/io/ion_structure_lib/RCSB/: NH4.sdf  SO4.sdf
toolbox/ml/: __init__.py  tf_graph.py
toolbox/plot/: __init__.py  core.py  dp.py  figure.py  stats.py  style.py
toolbox/plot/mplstyle/: pre.mplstyle  pub-acs.mplstyle  pub.mplstyle
toolbox/utils/: __init__.py  bibtool.py  data.py  math.py  optimizer.py  ref_data.py  toy_model.py  unit.py  utils.py
unittest/: index.html
