# SPDX-License-Identifier: LGPL-3.0-or-later

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbox"
version = "1.0"
description = "ec-MLP: Machine Learning Potential for ElectroChemistry"
readme = "README.md"
license = { file = ".license-header.txt" }
dependencies = [
    "monty",
    "regex",
    "ase",
    "scipy",
    "scikit-learn",
    "h5py",
    "mdapackmol",
    "statsmodels",
    "dpdispatcher",
]

[project.urls]
Homepage = "https://github.com/ChiahsinChu/toolbox"

[tool.setuptools.packages.find]
exclude = ["data", "cheatsheet"]
