# SPDX-License-Identifier: LGPL-3.0-or-later

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbox"
version = "1.0"
description = "ec-MLP: Machine Learning Potential for ElectroChemistry"
readme = "README.md"
license = { file = ".license-header.txt" }
dependencies = [
    "monty",
    "regex",
    "ase",
    "scipy",
    "scikit-learn",
    "h5py",
    "mdapackmol",
    "statsmodels",
    "dpdispatcher",
]

[project.urls]
Homepage = "https://github.com/ChiahsinChu/toolbox"

[tool.setuptools.packages.find]
exclude = ["data", "cheatsheet"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# # Assume Python 3.8
# target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of pycodestyle (`E`)  codes by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # numpy docstring
    "D",
]

# Never enforce `E501` (line length violations). Let formatter handle it.
ignore = [
    "E501",  # Line too long
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
# Use numpy style docstrings
convention = "numpy"
