# SPDX-License-Identifier: LGPL-3.0-or-later

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbox"
version = "2.0.0"
description = "Toolbox used for computational electrochemistry"
readme = "README.md"
license = { file = ".license-header.txt" }
dependencies = [
    "monty",
    "regex",
    "ase",
    "scipy",
    "scikit-learn",
    "h5py==3.8.0",
    "mdapackmol==0.1.0",
    "statsmodels",
    "dpdispatcher~=0.6",
    "cp2kdata",
    "matplotlib",
    "MDAnalysis>=2.7.0",
    "numpy~=1.26",
    "pybtex==0.24.0"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-glightbox>=0.3.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-awesome-pages-plugin>=2.8.0"
]

[project.urls]
Homepage = "https://github.com/ChiahsinChu/toolbox"

[tool.setuptools.packages.find]
exclude = ["data", "cheatsheet"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# # Assume Python 3.8
# target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of pycodestyle (`E`)  codes by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # numpy docstring
    "D",
]

# Never enforce `E501` (line length violations). Let formatter handle it.
ignore = [
    "E501",  # Line too long
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
# Use numpy style docstrings
convention = "numpy"
